--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="w3-center title" style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
 				<h1 class="space-letters tag-font w3-text-black"><b>SkinCheck: Análisis Inteligente de Lesiones Cutáneas</b></h1>
 				<h4 class="space-letters w3-text-black">Analizador de imágenes en línea de los tres diagnósticos más probables para una lesión en la piel</h4>
-				<h4 class="space-letters w3-text-black">Integrantes: Ian David Colina y Karen Manuela Torres</h4>
+				<h4 class="space-letters w3-text-black"><b>Integrantes</b>: Ian David Colina y Karen Manuela Torres</h4>
 				<img id="selected-image" class="w3-round adjust-image" src="assets/samplepic.jpg" alt="" style="max-width: 100%; height: auto;">
 			</div>
 
@@ -119,7 +119,7 @@
                 <div class="progress-bar">Modelo con Inteligencia Artificial cargando...</div>
             </div>
 
-            <div class="w3-center add-padding w3-border w3-round w3-pale-blue">
+            <div class="add-padding w3-border w3-round w3-pale-blue">
                 <h5>Resultados</h5>
                 <ol id="prediction-list"></ol>
             </div>
